# dbt

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  README.md  dagster_cloud.yaml  dbt_project.yml  main.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  selectors.yml  t.py
.github/workflows/: branch_deployments.yml  deploy.yml
analyses/: aircraft_seat_cnt.sql  airport_status.sql  asfdasf.sql  check_macros_safe_query.sql  flights_by_aircraft.sql  fligth_status_cnt.sql  fligths_future.sql  fligths_last_ten_years.sql  test.sql
dbt_project/: pyproject.toml  setup.py
dbt_project/dbt_project/: assets.py  definitions.py  project.py  schedules.py
macros/: backup_table_before_build.sql  bookref_to_bigint.sql  check_dependencies.sql  count_models.sql  limit_data_dev.sql  safe_select.sql  utils.sql
macros/generic/: airport_code_pattern.sql
models/Data_vault/raw_stage/: _raw_aircrafts.yml  raw_aircrafts.sql
models/Data_vault/stage/: _v_stg_flights__aircrafts.yml  v_stg_flights__aircrafts.sql
models/marts/flights/: _dm_seats_occupied.yml  dm_seats_occupied.sql
models/staging/demo_src/: _flights__sources.yml  _fligths__facts__sources.yml
models/staging/flights/: _flights__docs.md  _flights__sources.yml  _fligths__facts__sources.yml  _stg_flights__aircrafts.yml  _stg_flights__aircrafts_backup.yml  _stg_flights__airports.yml  _stg_flights__boarding_passes.yml  (+23 more)
seeds/: _dict__staff.yml  staff.csv
snapshots/: _snap_flights__aircrafts.yml  _snap_flights__seats.yml  snap_flights__aircrafts.sql  snap_flights__seats.sql
(+5 files in other folders)
